--- a/Templates/views/services.hbs
+++ b/Templates/views/services.hbs
@@ -21,7 +21,7 @@
     <div class="serve_item">
   <img id="rent" width="250px" src="img/rent.png" alt="rents">
   <h2>Rooms On Rent</h2>
-  <a style="text-decoration: none;color:white" href="services.html" target="mid"><button class="buzz-out-on-hover">Find now<img src="img/icons8-linking-24.png" width="12px"></button></a>
+  <a style="text-decoration: none;color:white" target="blank" href="room"> <button class="buzz-out-on-hover">Find now<img src="img/icons8-linking-24.png" width="12px"></button></a>
     </div>
   
   
